# django-sphinx-hosting

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  Makefile  README.md  index.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: Makefile  requirements.txt
doc/source/: api.rst  conf.py  index.rst
doc/source/api/: forms.rst  importers.rst  models.rst  rest_api.rst  widgets.rst
doc/source/overview/: api.rst  authoring.rst  authorization.rst  commands.rst  globaltoc.rst  importing.rst  packaging.rst
doc/source/runbook/: contributing.rst  main.rst
sandbox/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
sandbox/demo/: settings.py  urls.py
sandbox/demo/core/: urls.py  wildewidgets.py
sandbox/demo/core/management/commands/: bootstrap.py
sandbox/demo/core/static/core/css/: core.scss
sandbox/demo/core/templates/: intermediate.html
sandbox/demo/core/templates/core/: home.html  intermediate.html
sandbox/demo/theme/: apps.py  context_processors.py
sandbox/demo/theme/static/theme/css/: _globals.scss  _mixins.scss  _page.scss  _ribbon.scss  theme.css  theme.css.map  theme.scss
sandbox/demo/theme/static/theme/images/: site.webmanifest
sandbox/demo/theme/static/theme/js/: theme.js
sandbox/demo/theme/templates/theme/: base.html
sandbox/demo/theme/templates/theme/templatetags/: breadcrumb.html
sandbox/demo/theme/templatetags/: theme.py
sandbox/demo/users/: models.py
sandbox/demo/users/fixtures/: users.json
sandbox/demo/users/management/commands/: list_api_users.py  manage_api_user.py
sandbox/demo/users/migrations/: 0002_load_fixture.py  0003_api_group.py  0004_apiuser.py  0005_api_user_permissions.py
sandbox/etc/: ipython_config.py  nginx.conf
schema/: v1.yml
sphinx_hosting/: apps.py  exc.py  fields.py  form_fields.py  forms.py  importers.py  logging.py  models.py  search_indexes.py  settings.py  signals.py  urls.py  validators.py  views.py  wildewidgets.orig..py  wildewidgets.py
sphinx_hosting/api/: apps.py  permissions.py  serializers.py  urls.py  views.py
sphinx_hosting/fixtures/: classifiers.json
sphinx_hosting/management/commands/: fix_broken_hrefs.py  import_docs.py  parse_globaltoc.py  print_classifier_tree.py  print_doctree.py
sphinx_hosting/migrations/: 0001_initial.py  0002_original_html.py  0002_sphinx_version.py  0003_globaltoc.py  0004_next_page_FK.py  0005_orig_global_toc.py  0006_classifiers_and_permissiongroups.py  0007_load_classifiers.py  0008_Version_archived.py  0009_SphinxPage_searchable.py  0010_add_groups.py  0011_machinenamefield.py  0012_project_relatedlinks.py  0013_projectrelatedlink_url_to_uri.py  0014_latest_version_as_field.py  0015_migrate_to_latest_version_field.py  0016_project_last_version_alter.py  0017_alter_sphinxpage_body_and_more.py  0018_sphinxdocument.py
sphinx_hosting/static/sphinx_hosting/css/: _classifierfilterblock.scss  _sphinx_layout.scss  _wildewidgets.scss  sphinx_hosting.css  sphinx_hosting.scss
sphinx_hosting/static/sphinx_hosting/js/: sphinx_hosting.js
sphinx_hosting/templates/sphinx_hosting/: base.html
sphinx_hosting/templatetags/: sphinx_hosting.py
sphinx_hosting/wildewidgets/: __init__.py  classifier.py  navigation.py  project.py  search.py  sphinx_page.py  version.py
sphinx_hosting/wildewidgets/core/: __init__.py  basic.py  datagrid.py  grid.py  icons.py  navigation.py
