[metadata]
name = django-sphinx-hosting
version = 1.3.4
author = Caltech IMSS ADS
author_email = imss-ads-staff@caltech.edu
url = https://github.com/caltechads/django-sphinx-hosting
description = Reusable Django app for hosting Sphinx documentation privately.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
  documentation
  sphinx
  django
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
project_urls =
    Documentation = https://django-sphinx-hosting.readthedocs.io/en/latest/
    Source = https://github.com/caltechads/django-sphinx-hosting
    Issues = https://github.com/caltechads/django-sphinx-hosting/issues

[options]
zip_safe = False
platforms = any
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
  django-braces >= 1.15.0
  django-crispy-forms >= 1.14.0
  django-extensions >= 3.2.1
  django-filter >= 22.1
  django-haystack >= 3.2.1
  django-rest-framework-helpers >= 8.5.0
  django-theme-academy >= 0.3.5
  django-wildewidgets >= 0.16.7
  djangorestframework >= 3.14.0
  drf-spectacular >= 0.25.1
  crispy-bootstrap5
  humanize
  lxml >= 4.9.1
  cssselect >= 1.2.0
  rich

[bdist_wheel]
universal = 1

# -------
# Linters
# -------

[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with #
# E266:  too many leading # for block comment
# E401:  multiple imports on one line
ignore = E221,E241,E265,E266,E401,W504

[pylint.FORMAT]
max-line-length=120

[pylint.MESSAGES CONTROL]
disable=
    missing-docstring,
    protected-access,
    unused-argument,
    invalid-name,
    too-few-public-methods,
    attribute-defined-outside-init,
    consider-using-f-string,
    too-many-lines,
    no-member

[mypy]
python_executable: ~/.pyenv/shims/python
implicit_optional = True
exclude = (?x)(
    ^build
    | sandbox\/setup\.py$
    | migrations\/.*.py$
  )

[mypy-haystack.*]
ignore_missing_imports = True

[mypy-sphinx_rtd_theme.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-crequest.*]
ignore_missing_imports = True

[mypy-wildewidgets.*]
ignore_missing_imports = True

[mypy-environ.*]
ignore_missing_imports = True

[mypy-debug_toolbar.*]
ignore_missing_imports = True

[mypy-lxml.*]
ignore_missing_imports = True

[mypy-crispy_forms.*]
ignore_missing_imports = True

[mypy-django_extensions.*]
ignore_missing_imports = True

[mypy-braces.*]
ignore_missing_imports = True

[mypy-rest_framework_helpers.*]
ignore_missing_imports = True